# agentcore-identity

./: .bedrock_agentcore.yaml  .cdkignore  .gitignore  Dockerfile  README.md  cdk-bedrock-agentcore.js  cdk-bedrock-agentcore.ts  cdk.json  deploy.sh  deploy_bedrockagentcore.py  entrypoint.py  example_bedrock_agentcore_complete.py  package-lock.json  pyproject.toml  pytest.ini  requirements-docker.txt  requirements.txt  tsconfig.json
.github/workflows/: ci.yml
deployment/: Dockerfile  cdk_stack.py  cloudformation-stack-minimal.yaml  cloudformation-stack.yaml  deploy-phase-9.sh  deploy_phase_5.sh  deploy_phase_6.sh  deploy_phase_7.sh  deploy_phase_8.sh  deploy_phase_9.py  docker-compose.yml  simple-bedrock-stack.yaml
deployment/compose/: docker-compose-full.yml
docs/: ATLASSIAN_OAUTH_SETUP.md  IMAGE_GENERATION_NANOBANANA.md  IMPLEMENTATION_GUIDES.md  PRODUCTION_DEPLOYMENT.md  PUBLIC_RELEASE_BRAINSTORM.md  README.md  medium-article-agentcore-refined.html  medium-article-agentcore-refined.md
docs/architecture/: 2026-03-10-atlassian-agentic-flow.md  2026-03-12-mcp-tool-discovery-routing.md  ADR-2026-02-25-hybrid-oauth2-baseline-selection.md
docs/diagrams/: 2026-03-12-agentcore-atlassian-google-auth-deep-dive.html  2026-03-12-multi-target-supervisor-explainer.html
image-generator-openai/: README.md
infra/cdk/: cdk-app.ts  (+2 more)
lib/: bedrock-agentcore-stack.ts  stack.ts
scripts/: agentcore_atlassian_user_federation_flow.py  agentcore_google_user_federation_flow.py  atlassian_20q_session_binding.py  atlassian_consent_guard.py  cdk_autonomous_lfg.sh  demo_claude_codex_roundtrip.py  deploy_atlassian_target.sh  deploy_cloudformation.py  discover_gateway_tools.py  render_multi_target_evidence_html.py  run_atlassian_10q_rag_probe.py  run_atlassian_20q_rag_probe.py  run_multi_target_e2e.py  setup_cognito.py  wave2_gateway_auth_contract_smoke.sh
tests/: conftest.py  test_agentcore_identity_complete.py  test_basic_functionality.py  test_integration_suite.py
todos/: 001-complete-p2-lfg-gateway-id-hardcoded.md
(+72 files in other folders)
